--- a/package.json
+++ b/package.json
@@ -8,22 +8,19 @@
     "gulp": "~3.8.7",
     "gulp-autoprefixer": "~0.0.9",
     "gulp-cache": "~0.2.1",
+    "gulp-compass": "~1.3.1",
+    "gulp-concat": "~2.3.4",
     "gulp-connect": "~2.0.6",
     "gulp-imagemin": "~1.0.1",
-    "gulp-concat": "~2.3.4",
     "gulp-jshint": "~1.8.4",
     "gulp-livereload": "~2.1.1",
     "gulp-minify-css": "~0.3.7",
-    "gulp-compass": "~1.3.1",
+    "gulp-ng-annotate": "^0.3.1",
     "gulp-notify": "~1.5.0",
     "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~0.3.2",
     "gulp-sass": "~0.7.3",
-    "vinyl-buffer": "~1.0.0",
-    "vinyl-source-stream": "~1.0.0",
-    "browserify": "~5.11.1",
-    "ng-annotate": "~0.9.11",
-    "gulp-sourcemaps": "~1.1.4"
+    "gulp-sourcemaps": "~1.1.4",
+    "gulp-uglify": "~0.3.2"
   },
   "dependencies": {
     "angular": "~1.2.23",
